#51 - added unit tests with 100% line and mutation coverage and resolved sonarqube violations in common project